force-app/main/default/objects/Employee__c/fields/Age_Calculate__c.field-meta.xml
<CustomField>
    <fullName>Age_Calculate__c</fullName>
    <formula>FLOOR((TODAY() - Date_of_Birth__c) / 365.25)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Age Calculate</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>