force-app/main/default/objects/Employee__c/fields/EmployeeId__c.field-meta.xml
<CustomField>
    <fullName>EmployeeId__c</fullName>
    <label>EmployeeId</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>