force-app/main/default/objects/Employee__c/fields/Hour_Worked__c.field-meta.xml
<CustomField>
    <fullName>Hour_Worked__c</fullName>
    <label>Hour Worked</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>