force-app/main/default/objects/Employee__c/fields/Other_Skill_set__c.field-meta.xml
<CustomField>
    <fullName>Other_Skill_set__c</fullName>
    <label>Other Skill set</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>