force-app/main/default/objects/Employee__c/fields/Secondary_Skill_set__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Skill_set__c</fullName>
    <label>Secondary Skill set</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Core Java</fullName>
            </value>
            <value>
                <fullName>Advanced Java</fullName>
            </value>
            <value>
                <fullName>Advanced Python</fullName>
            </value>
            <value>
                <fullName>Salesforce Lwc</fullName>
            </value>
            <value>
                <fullName>Salesforce CPQ</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>