force-app/main/default/objects/Employee__c/validationRules/Not_negative_Hour_worked.validationRule-meta.xml
<ValidationRule>
    <fullName>Not_negative_Hour_worked</fullName>
    <active>true</active>
    <errorConditionFormula>Hour_Worked__c   &lt; 0</errorConditionFormula>
    <errorMessage>Hours Worked should not be negative</errorMessage>
</ValidationRule>