force-app/main/default/objects/Employee__c/validationRules/Phone_Email_Mandatory.validationRule-meta.xml
<ValidationRule>
    <fullName>Phone_Email_Mandatory</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(Phone__c) &amp;&amp; ISBLANK(Email__c)</errorConditionFormula>
    <errorMessage>At least Phone or Email should be filledout</errorMessage>
</ValidationRule>