force-app/main/default/objects/Employee__c/validationRules/Salary_not_Negative_and_Exceed.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_not_Negative_and_Exceed</fullName>
    <active>true</active>
    <errorConditionFormula>Salary__c &lt; 0 || Salary__c &gt; 80000</errorConditionFormula>
    <errorMessage>Salary cannot be negative and should not exceed 80000 Rs</errorMessage>
</ValidationRule>