force-app/main/default/objects/Employee__c/validationRules/Salary_Rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Salary_Rule</fullName>
    <active>true</active>
    <errorConditionFormula>AND( NOT( ISNEW() ) , Salary__c  &lt;  PRIORVALUE( Salary__c ) )</errorConditionFormula>
    <errorMessage>Salary Cannot Be Decreased</errorMessage>
</ValidationRule>